Fixing shift clicking to select and deselect

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -911,17 +911,16 @@ input.normal,input.gray
       cursor pointer
       position absolute
       height 20px
-      width 50px
       background $c_logo_alt
       line-height 20px
-      font-size 20px
+      font-size 25px
       text-align center
       color $c_light
       z-index 1500
     .font_decrease
-      border_radius_bottom_only(10px)
+      border_radius_bottom_only(20px)
     .font_increase
-      border_radius_top_only(10px)
+      border_radius_top_only(20px)
     .active
       border 4px solid $c_logo_alt
       margin -4px
